--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>A.A.VUS.SU</title>
 </head>
 <body>
+     <script >
+alert ('hello start')
+    
+</script>
     alert('Hello SF')
 </body>
 <script src="A.js"></script>
